# S1bCr4ft

./: .gitignore  Cargo.toml  LICENSE  PROGRESO_FASE1.md  README.md  codecov.yml  deny.toml
.github/workflows/: ci.yml  release.yml
crates/s1bcr4ft-api/: Cargo.toml
crates/s1bcr4ft-api/src/: main.rs
crates/s1bcr4ft-cli/: Cargo.toml
crates/s1bcr4ft-cli/src/: main.rs
crates/s1bcr4ft-core/: Cargo.toml
crates/s1bcr4ft-core/src/: audit.rs  backup.rs  command_validator.rs  config.rs  error.rs  gpg.rs  hooks.rs  lib.rs  module.rs  package.rs  validation.rs
crates/s1bcr4ft-core/tests/: config_integration.rs  e2e_integration.rs  module_integration.rs
crates/s1bcr4ft-core/tests/common/: mod.rs
crates/s1bcr4ft-security/: Cargo.toml
crates/s1bcr4ft-security/src/: lib.rs  presets.rs
crates/s1bcr4ft-tui/: Cargo.toml
crates/s1bcr4ft-tui/src/: main.rs
examples/basic-arch/: config.yml
examples/developer-workstation/: config.yml
examples/malware-analysis-lab/: config.yml
examples/red-team-workstation/: config.yml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: command_validator.rs  command_validator_validate.rs
modules/ai-ml/code-analysis-tools/: module.yml
modules/ai-ml/cuda-toolkit/: module.yml
modules/ai-ml/jupyter-lab/: module.yml
modules/ai-ml/ollama-setup/: module.yml
modules/ai-ml/pytorch-setup/: module.yml
modules/ai-ml/tensorflow-setup/: module.yml
modules/core/base-system/: module.yml
modules/core/bootloader/: module.yml
modules/development/languages/rust/: module.yml
modules/development/tools/docker-podman/: module.yml
modules/linux-optimization/audio/pipewire-setup/: module.yml
modules/linux-optimization/browsers/firefox-hardened/: module.yml
modules/linux-optimization/display-managers/lightdm-config/: module.yml
modules/linux-optimization/display-managers/ly-config/: module.yml
modules/linux-optimization/dotfiles/stow-manager/: module.yml
modules/linux-optimization/fonts/nerd-fonts/: module.yml
modules/linux-optimization/system-tools/cli-utilities/: module.yml
modules/linux-optimization/system-tools/file-managers/: module.yml
modules/linux-optimization/system-tools/network-tools/: module.yml
modules/linux-optimization/terminal-config/nvim-config/: module.yml
modules/linux-optimization/terminal-config/tmux-config/: module.yml
modules/linux-optimization/terminal-config/zsh/: module.yml
modules/linux-optimization/terminal-emulators/alacritty-config/: module.yml
modules/linux-optimization/terminal-emulators/kitty-config/: module.yml
modules/linux-optimization/terminal-emulators/wezterm-config/: module.yml
modules/linux-optimization/themes/gtk-themes/: module.yml
modules/linux-optimization/window-managers/bspwm-config/: module.yml
modules/linux-optimization/window-managers/dwm-config/: module.yml
modules/linux-optimization/window-managers/hyprland-config/: module.yml
modules/linux-optimization/window-managers/i3-config/: module.yml
modules/malware-analysis/dynamic-analysis/cuckoo-sandbox/: module.yml
modules/malware-analysis/dynamic-analysis/frida-instrumentation/: module.yml
modules/malware-analysis/dynamic-analysis/gdb-debugging/: module.yml
modules/malware-analysis/forensics/autopsy-sleuthkit/: module.yml
modules/malware-analysis/forensics/volatility-framework/: module.yml
modules/malware-analysis/static-analysis/angr-symbolic-exec/: module.yml
modules/malware-analysis/static-analysis/ghidra-setup/: module.yml
modules/malware-analysis/static-analysis/ida-pro-setup/: module.yml
modules/malware-analysis/static-analysis/radare2-config/: module.yml
modules/red-team/c2-frameworks/empire-c2/: module.yml
modules/red-team/c2-frameworks/sliver-c2/: module.yml
modules/red-team/exploitation/exploit-db/: module.yml
modules/red-team/exploitation/metasploit-framework/: module.yml
modules/red-team/exploitation/sqlmap/: module.yml
modules/red-team/network-pivoting/proxychains/: module.yml
modules/red-team/password-cracking/hashcat-setup/: module.yml
modules/red-team/password-cracking/john-the-ripper/: module.yml
modules/red-team/post-exploitation/bloodhound-setup/: module.yml
modules/red-team/post-exploitation/mimikatz-wine/: module.yml
modules/red-team/reconnaissance/amass/: module.yml
modules/red-team/reconnaissance/nmap-masscan/: module.yml
modules/red-team/reconnaissance/recon-ng/: module.yml
modules/red-team/social-engineering/set-toolkit/: module.yml
modules/red-team/web-testing/burp-suite/: module.yml
modules/red-team/web-testing/owasp-zap/: module.yml
modules/red-team/wireless/aircrack-suite/: module.yml
modules/security/hardening/kernel-hardening/: module.yml
packaging/aur/: PKGBUILD  PKGBUILD-git  README.md
