[package]
name = "s1bcr4ft-api"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "REST API for remote S1bCr4ft management"

[[bin]]
name = "s1bcr4ft-api"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
actix-web = { workspace = true }
actix-cors = { workspace = true }
sqlx = { workspace = true }
jsonwebtoken = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

# Inter-crate dependencies
s1bcr4ft-core = { path = "../s1bcr4ft-core" }

# API-specific dependencies
actix-rt = "2.9"
bcrypt = "0.15"

[features]
default = []
